# meshtastic_weather_and_disaster_bot

./: .gitignore  Cargo.toml  LICENSE  README.md  packets.md
crates/meshtastic_api/: Cargo.toml
crates/meshtastic_api/src/: channel.rs  error.rs  lib.rs  node_id.rs  packet.rs
crates/open_weather_map_api/: Cargo.toml
crates/open_weather_map_api/src/: cache.rs  error.rs  forecast.rs  lib.rs
crates/open_weather_map_api/src/forecast/: essential.rs
src/: bot.rs  config.rs  consts.rs  essential_forecast.rs  main.rs
src/bot/: error.rs
src/config/: error.rs
