[package]
name = "meshtastic_weather_and_disaster_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
meshtastic = "0.1.8"
reqwest = "0.13.2"
rss = "2.0.12"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = "1.49.0"
toml = "1.0.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
